# eden

./: CMakeLists.txt  Doxyfile  README.md  vcpkg.json
.ci/: install-vulkan-sdk.ps1  license-header.rb  license-header.sh  linux.sh  package-appimage.sh  source.sh  translate.sh  update-icons.sh
.ci/android/: build.sh
.ci/linux/: build-qt.sh  build.sh  package.sh
.ci/windows/: build.sh  install-msvc.ps1  install-vulkan-sdk.ps1  package.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-macos.yml  build.yml  trigger_release.yml
.reuse/: dep5
CMakeModules/: CPMUtil.cmake  CopyEdenFFmpegDeps.cmake  CopyEdenQt6Deps.cmake  CopyEdenSDLDeps.cmake  FindLLVM.cmake  GenerateSCMRev.cmake  MinGWClangCross.cmake  MinGWCross.cmake
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt
src/common/: CMakeLists.txt  assert.h  common_funcs.h  heap_tracker.cpp  host_memory.cpp  intrusive_list.h  intrusive_red_black_tree.h  microprofile.h  play_time_manager.cpp  play_time_manager.h  scope_exit.h  settings.h
src/core/: CMakeLists.txt  device_memory_manager.inc  memory.cpp  memory.h
src/dedicated_room/: CMakeLists.txt  eden_room.rc
src/dynarmic/: CMakeLists.txt
src/eden/: CMakeLists.txt  about_dialog.cpp  aboutdialog.ui  bootmanager.cpp  bootmanager.h  breakpad.cpp  compatdb.cpp  compatdb.ui  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  install_dialog.cpp  main.cpp  (+11 more)
tools/: cpm-fetch-all.sh  cpm-fetch.sh  cpm-hash.sh  url-hash.sh
(+427 files in other folders)
